Bug 463160 - Kate welcome tab not closeable from tab bar 'x' icon
Summary: Kate welcome tab not closeable from tab bar 'x' icon
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-17 16:52 UTC by David
Modified: 2022-12-19 17:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kate_close_tab (10.26 KB, image/png)
2022-12-17 16:52 UTC, David
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David 2022-12-17 16:52:28 UTC
Created attachment 154650 [details]
kate_close_tab

SUMMARY
After the last kate update, whenever it starts up, it shows a "welcome" tab which cannot be closed from the tab 'x' icon.

STEPS TO REPRODUCE
1. Launch kate.
2. Click on the 'x' icon of the "welcome" tab in the tab bar.

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
Should close the welcome tab and leave me with an empty tab.

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Kernel Version: 5.18.0-4-amd64 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 2700 Eight-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX Vega
Manufacturer: Acer
Product Name: Predator PH517-61
System Version: V1.09
ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-12-17 19:14:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1042
Comment 2 Christoph Cullmann 2022-12-19 17:40:22 UTC
Git commit 7d416c1a8c166cf89dd9b9c5cdff985d045abc71 by Christoph Cullmann.
Committed on 17/12/2022 at 19:11.
Pushed by cullmann into branch 'master'.

avoid to show welcome view multiple times

allows proper closing via tab button, too

M  +2    -1    apps/lib/kateviewmanager.cpp
M  +6    -0    apps/lib/kateviewmanager.h

https://invent.kde.org/utilities/kate/commit/7d416c1a8c166cf89dd9b9c5cdff985d045abc71