avoid to show welcome view multiple times

allows proper closing via tab button, too
BUG: 463160