apps/lib/kateviewmanager.cpp
@@ -1650,7 +1650,7 @@ void KateViewManager::showWelcomeViewOrNewDocumentIfNeeded()
         // the user can decide: welcome page or a new untitled document for a new window?
         KSharedConfig::Ptr config = KSharedConfig::openConfig();
         KConfigGroup cgGeneral = KConfigGroup(config, "General");
-        if (cgGeneral.readEntry("Show welcome view for new window", true)) {
+        if (!m_welcomeViewAlreadyShown && cgGeneral.readEntry("Show welcome view for new window", true)) {
             showWelcomeView();
         } else {
             slotDocumentNew();
@@ -1663,6 +1663,7 @@ void KateViewManager::showWelcomeView()
 {
     auto welcomeView = new WelcomeView(this);
     mainWindow()->addWidget(welcomeView);
+    m_welcomeViewAlreadyShown = true;
 }
 
 void KateViewManager::triggerActiveViewFocus()
